--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Yemaung.GitHub.io by YeMaung</title>
+    <title>တဝဲ လည်လည်</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -18,29 +18,29 @@
     <section class="main-content">
       <h3>တဝဲ လည်လည်</h3>
 
-<p> ငှက်တစ်ကောင်လို...
-ခိုနားဖူးရာ ၊ ရင္မွာ မသိ
-မငြိတွယ်တတ် ၊ စိတ်လွတ်လပ်နှင့်
-ဖြတ်ခွာရှေ့ဆက်ချင်သော်လည်း...။
+<p> ငှက်တစ်ကောင်လို...<br />
+ခိုနားဖူးရာ ၊ ရပ်ဌာ မသိ<br />
+မငြိတွယ်တတ် ၊ စိတ်လွတ်လပ်နှင့်<br />
+ဖြတ်ခွာရှေ့ဆက်ချင်သော်လည်း...။<br /><br />
 
-မြက်တစ်ပင်လို...
-အမျှင်မရှိ ၊ တိခနဲပြတ်
-ဖြတ်လွယ် ပြတ်လွယ်
-တွယ်တာ မရစ်
-သစ်စိမ်းချိုးနှယ်နေချင်လည်း...။
+မြက်တစ်ပင်လို...<br />
+အမျှင်မရှိ ၊ တိခနဲပြတ်<br />
+ဖြတ်လွယ် ပြတ်လွယ်<br />
+တွယ်တာ မရစ်<br />
+သစ်စိမ်းချိုးနှယ်နေချင်လည်း...။<br /><br />
 
-ကြာတစ်ရိုးလို...
-ချိုးဖြတ်သော်လည်း ၊ အမျှင်တွဲနှင့်
-ခွဲခက်ခွာခက် ၊ မစွန့်ရက်ပြန်
-သံယောဇဉ်ဖြစ်....
-ကြာဆစ်ကြိုးနှယ် ဘဝမို့...။
+ကြာတစ်ရိုးလို...<br />
+ချိုးဖြတ်သော်လည်း ၊ အမျှင်တွဲနှင့်<br />
+ခွဲခက်ခွာခက် ၊ မစွန့်ရက်ပြန်<br />
+သံယောဇဉ်ဖြစ်....<br />
+ကြာဆစ်ကြိုးနှယ် ဘဝမို့...။<br /><br />
 
-ဝေးရာ ဝေးရာ
-ပြေးခွာစွန့်ထွက်
-စက္ကူ စွန်မျိုး ၊ ကြိုးတန်းလန်းငင်
-အမျှင်မပြတ် ၊ ဖြတ်ခွာဖြေချွတ်
-သည်နှောင်ဝဋ်က
-လွတ်လွတ်မစွန့်နိုင်သူတည်း ...။ ။
+ဝေးရာ ဝေးရာ<br />
+ပြေးခွာစွန့်ထွက်<br />
+စက္ကူ စွန်မျိုး ၊ ကြိုးတန်းလန်းငင်<br />
+အမျှင်မပြတ် ၊ ဖြတ်ခွာဖြေချွတ်<br />
+သည်နှောင်ဝဋ်က<br />
+လွတ်လွတ်မစွန့်နိုင်သူတည်း ...။ ။<br /><br />
 
 မောင်စိန်ဝင်း(ပုတီးကုန်း)</p>
 
