--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <style type="text/css">
+		@font-face {
+		  font-family: 'Noto Sans Myanmar';
+		  font-style: normal;
+		  font-weight: normal;
+		  src: url(//fonts.gstatic.com/ea/notosansmyanmar/v3/NotoSansMyanmar-Regular.eot);
+		  src: url(//fonts.gstatic.com/ea/notosansmyanmar/v3/NotoSansMyanmar-Regular.eot?#iefix) format('embedded-opentype'),
+		       url(//fonts.gstatic.com/ea/notosansmyanmar/v3/NotoSansMyanmar-Regular.woff2) format('woff2'),
+		       url(//fonts.gstatic.com/ea/notosansmyanmar/v3/NotoSansMyanmar-Regular.woff) format('woff'),
+		       url(//fonts.gstatic.com/ea/notosansmyanmar/v3/NotoSansMyanmar-Regular.ttf) format('truetype');
+		}
+		* , html, body, div,p ,post-body-snippet,title,widget-content{font-family:'Noto Sans Myanmar'!important;}
+    </style>
   </head>
   <body>
     <section class="page-header">
@@ -18,31 +31,31 @@
     <section class="main-content">
       <h3>တဝဲ လည်လည်</h3>
 
-<p> ငှက်တစ်ကောင်လို...<br />
-ခိုနားဖူးရာ ၊ ရပ်ဌာ မသိ<br />
-မငြိတွယ်တတ် ၊ စိတ်လွတ်လပ်နှင့်<br />
-ဖြတ်ခွာရှေ့ဆက်ချင်သော်လည်း...။<br /><br />
+		<p> ငှက်တစ်ကောင်လို...<br />
+		ခိုနားဖူးရာ ၊ ရပ်ဌာ မသိ<br />
+		မငြိတွယ်တတ် ၊ စိတ်လွတ်လပ်နှင့်<br />
+		ဖြတ်ခွာရှေ့ဆက်ချင်သော်လည်း...။<br /><br />
 
-မြက်တစ်ပင်လို...<br />
-အမျှင်မရှိ ၊ တိခနဲပြတ်<br />
-ဖြတ်လွယ် ပြတ်လွယ်<br />
-တွယ်တာ မရစ်<br />
-သစ်စိမ်းချိုးနှယ်နေချင်လည်း...။<br /><br />
+		မြက်တစ်ပင်လို...<br />
+		အမျှင်မရှိ ၊ တိခနဲပြတ်<br />
+		ဖြတ်လွယ် ပြတ်လွယ်<br />
+		တွယ်တာ မရစ်<br />
+		သစ်စိမ်းချိုးနှယ်နေချင်လည်း...။<br /><br />
 
-ကြာတစ်ရိုးလို...<br />
-ချိုးဖြတ်သော်လည်း ၊ အမျှင်တွဲနှင့်<br />
-ခွဲခက်ခွာခက် ၊ မစွန့်ရက်ပြန်<br />
-သံယောဇဉ်ဖြစ်....<br />
-ကြာဆစ်ကြိုးနှယ် ဘဝမို့...။<br /><br />
+		ကြာတစ်ရိုးလို...<br />
+		ချိုးဖြတ်သော်လည်း ၊ အမျှင်တွဲနှင့်<br />
+		ခွဲခက်ခွာခက် ၊ မစွန့်ရက်ပြန်<br />
+		သံယောဇဉ်ဖြစ်....<br />
+		ကြာဆစ်ကြိုးနှယ် ဘဝမို့...။<br /><br />
 
-ဝေးရာ ဝေးရာ<br />
-ပြေးခွာစွန့်ထွက်<br />
-စက္ကူ စွန်မျိုး ၊ ကြိုးတန်းလန်းငင်<br />
-အမျှင်မပြတ် ၊ ဖြတ်ခွာဖြေချွတ်<br />
-သည်နှောင်ဝဋ်က<br />
-လွတ်လွတ်မစွန့်နိုင်သူတည်း ...။ ။<br /><br />
+		ဝေးရာ ဝေးရာ<br />
+		ပြေးခွာစွန့်ထွက်<br />
+		စက္ကူ စွန်မျိုး ၊ ကြိုးတန်းလန်းငင်<br />
+		အမျှင်မပြတ် ၊ ဖြတ်ခွာဖြေချွတ်<br />
+		သည်နှောင်ဝဋ်က<br />
+		လွတ်လွတ်မစွန့်နိုင်သူတည်း ...။ ။<br /><br />
 
-မောင်စိန်ဝင်း(ပုတီးကုန်း)</p>
+		မောင်စိန်ဝင်း(ပုတီးကုန်း)</p>
 
       <footer class="site-footer">
 
