--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>ချစ်စရာ ကဗျာ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <style type="text/css">
@@ -32,7 +32,7 @@
       <h3>တဝဲ လည်လည်</h3>
 
 		<p> ငှက်တစ်ကောင်လို...<br />
-		ခိုနားဖူးရာ ၊ ရပ်ဌာ မသိ<br />
+		ခိုနားဖူးရာ ၊ ရင်မှာ မသိ<br />
 		မငြိတွယ်တတ် ၊ စိတ်လွတ်လပ်နှင့်<br />
 		ဖြတ်ခွာရှေ့ဆက်ချင်သော်လည်း...။<br /><br />
 
