--- a/index.html
+++ b/index.html
@@ -10,16 +10,10 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <style type="text/css">
 		@font-face {
-		  font-family: 'Noto Sans Myanmar';
-		  font-style: normal;
-		  font-weight: normal;
-		  src: url(//fonts.gstatic.com/ea/notosansmyanmar/v3/NotoSansMyanmar-Regular.eot);
-		  src: url(//fonts.gstatic.com/ea/notosansmyanmar/v3/NotoSansMyanmar-Regular.eot?#iefix) format('embedded-opentype'),
-		       url(//fonts.gstatic.com/ea/notosansmyanmar/v3/NotoSansMyanmar-Regular.woff2) format('woff2'),
-		       url(//fonts.gstatic.com/ea/notosansmyanmar/v3/NotoSansMyanmar-Regular.woff) format('woff'),
-		       url(//fonts.gstatic.com/ea/notosansmyanmar/v3/NotoSansMyanmar-Regular.ttf) format('truetype');
+		font-family:’MON3 Anonta 1′;
+		src:local(‘MON3 Anonta 1’),url(‘http://mmwebfonts.comquas.com/fonts/mon3.ttf‘);
 		}
-		* , html, body, div,p ,post-body-snippet,title,widget-content{font-family:'Noto Sans Myanmar'!important;}
+		body,html,p,code,*,table,td,tr,span,div,a,ul,li,input,textarea{font-family:’MON3 Anonta 1′!important;}
     </style>
   </head>
   <body>
