--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     <style type="text/css">
-		@font-face {
-		font-family:’MON3 Anonta 1′;
-		src:local(‘MON3 Anonta 1’),url(‘http://mmwebfonts.comquas.com/fonts/mon3.ttf‘);
-		}
-		body,html,p,code,*,table,td,tr,span,div,a,ul,li,input,textarea{font-family:’MON3 Anonta 1′!important;}
+    @import url(http://fonts.googleapis.com/earlyaccess/tharlon.css);
+	font-family: 'Tharlon', sans-serif;
     </style>
   </head>
   <body>
