--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>ချစ်စရာ ကဗျာ</title>
+    <title>စိတ်ထဲရှိ သမျှ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
@@ -15,13 +15,12 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">ချစ်စရာ ကဗျာ</h1>
+      <h1 class="project-name">စိတ်ထဲရှိ သမျှ</h1>
       <h2 class="project-tagline"></h2>
     </section>
 
     <section class="main-content">
-      <h3>ရင်တွင်း ဆန္ဒ</h3>
-
+      	<h3>ရင်တွင်း ဆန္ဒ</h3>
 		<p> 
 			ချစ်သူနှုတ်ခမ်း <br />
 			ပြုံးယောင်သန်းဖို့ <br />
@@ -29,6 +28,18 @@
 			လျှင်စွာဖြည့်ဆည်း <br />
 			ပေးချင်မိ… ။ <br /><br />
 		</p>
+
+		<h3>ချစ်သူ သိစေ</h3>
+		<p> 
+			လွမ်းဆွေးမှုတွေက အိပ်ပျက်ညတွေ <br />
+			ဖန်တီးတက်တယ်ဆိုရင် <br />
+			ငါ ဘယ်တော့မှ မအိပ်ပါရစေနဲ့ ... ။ <br /> <br />
+
+			နင် ဖန်ဆင်းတဲ့ <br />
+			လွမ်းဆွေးမှုတွေကို <br />
+			ငါချစ်လွန်းလို့ ...။ <br /><br />
+		</p>
+
 
       <footer class="site-footer">
 
