--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     </section>
 
     <section class="main-content">
+    	<h3>ရင်တွင်း ဆန္ဒ</h3>
+		<p> 
+			ချစ်သူနှုတ်ခမ်း <br />
+			ပြုံးယောင်သန်းဖို့ <br />
+			သူဖြစ်ချင်ရာ လိုချင်ရာကို <br />
+			လျှင်စွာဖြည့်ဆည်း <br />
+			ပေးချင်မိ… ။ <br /><br />
+
+			<small>6 March 2016</small>
+		</p>
 
 		<h3>ချစ်သူ သိစေ</h3>
 		<p> 
@@ -30,15 +40,8 @@
 			နင် ဖန်ဆင်းတဲ့ <br />
 			လွမ်းဆွေးမှုတွေကို <br />
 			ငါချစ်လွန်းလို့ ...။ <br /><br />
-		</p>
 
-		<h3>ရင်တွင်း ဆန္ဒ</h3>
-		<p> 
-			ချစ်သူနှုတ်ခမ်း <br />
-			ပြုံးယောင်သန်းဖို့ <br />
-			သူဖြစ်ချင်ရာ လိုချင်ရာကို <br />
-			လျှင်စွာဖြည့်ဆည်း <br />
-			ပေးချင်မိ… ။ <br /><br />
+			<small>18 Feb 2016</small>
 		</p>
 
 		<h3>ချစ်သူတမ်းချင်း</h3>
@@ -55,6 +58,8 @@
 			သတိရလွန်းလို့လား <br />
 			လွမ်းလွန်းလို့လား <br />
 			သိပ်ချစ်လွန်းလို့ ဖြစ်မှာပါ ...။ <br /><br />
+
+			<small>27 Jan 2016</small>
 		</p>
       <footer class="site-footer">
 
