Padauk Font Embeded

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/earlyaccess/tharlon.css">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/earlyaccess/padauk.css">
     <style>
       body {
-        font-family: 'Tharlon', sans-serif;
+        font-family: 'Padauk', sans-serif;
       }
     </style>
   </head>
