--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/earlyaccess/padauk.css">
+    @import url(http://fonts.googleapis.com/earlyaccess/padauk.css);
     <style>
       body {
         font-family: 'Padauk', sans-serif;
@@ -22,6 +22,43 @@
     </section>
 
     <section class="main-content">
+    	<h3>အထီးကျန် အလွမ်း</h3>
+    	<p>
+    		လမိုက်ည သန်းခေါ်ယံ <br />
+    		မိုးကုတ်စက်ဝိုင်းအောက်မှာ <br />
+    		ငါတစ်ယောက်တည်း 
+    	</p>
+    	<p>
+    		လေပြေညှင်းတွေ <br />
+    		သယ်ဆောင်လာတဲ့ <br />
+    		အလွမ်းရယ် 
+    	</p>
+    	<p>
+    		ပိုးစုန်းကြူးလေးတွေ <br />
+    		သယ်ဆောင်လာတဲ့ <br />
+    		သတိရခြင်းတွေရယ်…။ 
+    	</p>
+    	<p>
+    		ငါနားထဲမှာတော့ <br />
+    		မင်းပြောတက်တဲ့ <br />
+    		“…. ” ဆိုတဲ့ <br />
+    		အသံလေးတွေ <br />
+    		ပဲ့တင်ထပ်လို့…။ 
+    	</p>
+    	<p>
+    		အရာရာဟာ <br />
+    		မှုန်ဝါးနေပေမယ့် <br />
+    		ငါရဲ့ အမြင်အာရုံတွေမှာတော့ <br />
+    		မင်းရဲ့ အပြုံးလေးတွေ <br />
+    		စိုးမိုးနေတယ်…။
+    	</p>
+    	<p>
+    		ငါအတွေးတွေထဲ <br />
+    		ဝင်လာတဲ့ အသိတစ်ခု <br />
+    		မင်းလေ<br />
+    		သိပ်ချစ်ဖို့ ကောင်းတာပဲ။
+    	</p>
+
     	<h3>ပျော်ရွှင်ခွင့်</h3>
     	<p>
     		အချစ်ဆိုတာ <br />
