--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     	<p>
     		လမိုက်ည သန်းခေါ်ယံ <br />
     		မိုးကုတ်စက်ဝိုင်းအောက်မှာ <br />
-    		ငါတစ်ယောက်တည်း 
+    		ငါတစ်ယောက်တည်း <br />
+            ရှိနေသလိုမျိုး <br />
+            ချစ်သူဝေးတဲ့ <br />
+            အထီးကျန်ည...။
     	</p>
     	<p>
     		လေပြေညှင်းတွေ <br />
@@ -48,7 +51,7 @@
     	<p>
     		အရာရာဟာ <br />
     		မှုန်ဝါးနေပေမယ့် <br />
-    		ငါရဲ့ အမြင်အာရုံတွေမှာတော့ <br />
+    		အမြင်အာရုံတွေမှာတော့ <br />
     		မင်းရဲ့ အပြုံးလေးတွေ <br />
     		စိုးမိုးနေတယ်…။
     	</p>
@@ -56,7 +59,8 @@
     		ငါအတွေးတွေထဲ <br />
     		ဝင်လာတဲ့ အသိတစ်ခု <br />
     		မင်းလေ<br />
-    		သိပ်ချစ်ဖို့ ကောင်းတာပဲ။
+    		သိပ်ချစ်ဖို့ ကောင်းတာပဲ။ <br />
+            <small>30 March 2016</small>
     	</p>
 
     	<h3>ပျော်ရွှင်ခွင့်</h3>
@@ -64,7 +68,7 @@
     		အချစ်ဆိုတာ <br />
 			လွမ်းဆွေးမှုနဲ့ မွန်းကြပ်မှုတွေပဲလို့ <br />
 			ငါပြောရင် မင်းယုံပါ <br />
-			ချစ်သူ… ။ 
+			ချစ်သူ… ။ <br />
     	</p>
     	<p>
     		ဘယ်တော့လဲ <br />
